[package]
name = "ub2cb"
version = "0.1.0"
description = "uBlock to WebKit content blocker filter conversion"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/ub2cb"
rust-version = "1.76.0"
license = "GPL-3.0"
edition = "2021"

[workspace]
members = [
    "ub2cb_bin",
]

[dependencies]
bitflags = "2.6.0"
log = "0.4.22"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
